fix(material): correct selector and adjust display and font-size for mat-icon-button directive
Selecting directive is not enough because mdc's style makes buttons not fit in small form fields.

OUI-2359

--- a/projects/oblique/src/styles/scss/material/mixins/_mat-form-field.scss
+++ b/projects/oblique/src/styles/scss/material/mixins/_mat-form-field.scss
@@ -26,8 +26,11 @@
 		}
 	}
 
-	.mat-form-field-suffix .mat-datepicker-toggle .mat-icon-button {
+	.mat-form-field-suffix .mat-datepicker-toggle .mdc-icon-button {
 		height: $icon-size;
 		width: $icon-size;
+		display: inline-flex;
+		align-items: center;
+		font-size: inherit;
 	}
 }
